<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nome_item_EditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nome_item_EditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preco_item_EditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/preco_item_EditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastra_item_button"
        android:id="@+id/cadastra_item_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>